--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Coursera</title>
+    <title>Hello Coursera!!!</title>
 </head>
 <body>
 <h1>Hello Sir not so fast just slow down</h1>  
